--- a/pil/src/App.css
+++ b/pil/src/App.css
@@ -1,42 +1,53 @@
+/* App.css Begining to implement CSS
+Basic styling for the app  without CSS Frameworks - By Jack Fuhrer */
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background: radial-gradient(circle at top left, #f1f1f1 0, #6b7280 50%); 
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.FlightInfo {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+ 
+  border-radius: 5px; /* Rounded corners */
+   /* Adjust width as needed */
+  background-color: #E8E2D8; /* White background */
+  margin: 15px; /* Spacing between cards if in a layout */
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.FlightInfo:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transform: translateY(-5px); /* Subtle lift effect */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.PassengerList {
+  display: flex 1;
+  flex-wrap: wrap;
+  justify-content: center;
+  border-radius: 5px; /* Rounded corners */
+  gap: 10px; /* Space between passenger cards */
+  transition: 0.3s; 
+  border: 1px solid black;
+  margin-bottom: 5px; 
 }
 
-.card {
-  padding: 2em;
+.PassengerList.selected {
+  border: 2px solid #646cff; /* Highlight selected card */
+  box-shadow: 0 8px 16px 0 rgba(100, 108, 255, 0.4); /* Glow effect */
+  background-color: #E8E2D8;
 }
 
-.read-the-docs {
-  color: #888;
+.PassengerList:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  transform: translateY(-5px); /* Subtle lift effect */
 }
+
+
+/* .PassengerDetails {
+
+} */
+
+/* Need to finish styling for details, the NEEDS ATTENTION & mobile support */
