--- a/pil/src/App.css
+++ b/pil/src/App.css
@@ -4,12 +4,12 @@ Basic styling for the app  without CSS Frameworks - By Jack Fuhrer */
 body {
   margin: 0 auto;
   text-align: center;
-  background-color: #eeeeee; 
+  background-color: #eeeeee;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
+}
 
-  /* Main app wrapper */
+/* Main app wrapper */
 .app {
   margin: 20px auto;
   padding: 16px;
@@ -27,15 +27,15 @@ body {
 /* ------ Flight Info Card ------ */
 
 .flightInfo {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  border-radius: 5px; 
-  background-color: #E8E2D8; 
-  margin: 15px; /
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  background-color: #E8E2D8;
+  margin: 15px;/
 }
 
 .flightInfo:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  transform: translateY(-5px); 
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
 }
 
 /* ------ Passenger List Layout ------ */
@@ -43,6 +43,7 @@ body {
 .passengerListContainer {
   flex: 1;
 }
+
 .passengerList {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
@@ -53,33 +54,34 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  border-radius: 5px; 
-  gap: 10px; 
-  transition: 0.3s; 
+  border-radius: 5px;
+  gap: 4px;
+  transition: 0.3s;
   border: 1px solid black;
-  margin: 2px; 
+  margin: 2px;
   background: #fafafa;
   position: relative;
 }
 
 .passengerCard.selected {
-  border: 2px solid #646cff; /* Highlight selected card */
-  box-shadow: 0 8px 16px 0 rgba(100, 108, 255, 0.4); 
+  border: 2px solid #646cff;
+  /* Highlight selected card */
+  box-shadow: 0 8px 16px 0 rgba(100, 108, 255, 0.4);
   background-color: #E8E2D8;
 }
 
 .passengerCard:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  transform: translateY(-5px); 
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
 }
 
 /* attention icon */
 .passengerCard img {
-  position: absolute;     
-  top: 4px;               
-  left: 4px;              
-  width: 16px;           
-  height: 16px;           
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 16px;
+  height: 16px;
 }
 
 /* ------ Passenger Details Layout ------ */
@@ -91,13 +93,13 @@ body {
   border-radius: 4px;
   padding: 12px;
   background: #fafafa;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
   overflow-y: auto;
-} 
+}
 
 .passengerDetails p {
   margin: 8px 0;
-  
+
 }
 
 .passengerDetails h2 {
@@ -126,7 +128,7 @@ body {
   .passengerCard {
     padding: 1px;
     font-size: 0.5rem;
-    margin: 0; 
+    margin: 0;
   }
 
   .passengerCard img {
@@ -135,9 +137,9 @@ body {
   }
 
   .passengerDetails {
-    order: -1; 
+    order: -1;
     margin-top: 0;
     font-size: 0.5rem;
-    
+
   }
 }
