--- a/pil/src/App.css
+++ b/pil/src/App.css
@@ -3,7 +3,6 @@ Basic styling for the app  without CSS Frameworks - By Jack Fuhrer */
 
 body {
   margin: 0 auto;
-  text-align: center;
   background-color: #eeeeee;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -33,19 +32,19 @@ body {
   margin: 15px;/
 }
 
-.flightInfo:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  transform: translateY(-5px);
-}
+
 
 /* ------ Passenger List Layout ------ */
 
 .passengerListContainer {
   flex: 1;
+  overflow-y: auto; 
+  max-height: 80vh;
 }
 
 .passengerList {
   display: grid;
+  text-align: center;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 10px;
 }
@@ -87,6 +86,7 @@ body {
 /* ------ Passenger Details Layout ------ */
 
 .passengerDetails {
+  text-align: center;
   flex: 1;
   min-width: 260px;
   border: 1px solid #ddd;
